--- a/css/simple-sidebar.css
+++ b/css/simple-sidebar.css
@@ -28,6 +28,7 @@
   -moz-transition: all 0.5s ease;
   -o-transition: all 0.5s ease;
   transition: all 0.5s ease;
+  overflow: hidden;
 }
 #wrapper.toggled #sidebar-wrapper {
   width: 250px;
@@ -97,6 +98,8 @@
   }
   #sidebar-wrapper {
     width: 250px;
+    height:100%;
+    overflow: hidden;
   }
   #wrapper.toggled #sidebar-wrapper {
     width: 0;
