--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,12 +9,14 @@
   <div id="wrapper">
     {% include header.html %}
     <div class="navbar navbaar-fixed-top">
-      <button type="button" class="nav-toggle" id="menu-toggle">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
+      <div class="container-fluid">
+        <button type="button" class="nav-toggle" id="menu-toggle">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+      </div>
     </div>
     <div id="page-content-wrapper">
       <div class="container-fluid">
@@ -30,5 +32,4 @@
   {% include js.html %}
 
 </body>
-
 </html>
