--- a/css/simple-sidebar.css
+++ b/css/simple-sidebar.css
@@ -117,9 +117,8 @@
   margin-top: 8px;
   margin-right: 15px;
   margin-bottom: 8px;
-  background-color: transparent;
+  background-color: #000;
   background-image: none;
-  border: 1px solid transparent;
   border-radius: 4px;
 }
 .nav-toggle:focus {
