--- a/css/simple-sidebar.css
+++ b/css/simple-sidebar.css
@@ -134,7 +134,7 @@
   margin-top: 4px;
 }
 .icon-bar {
-  background-color: #070339;
+  background-color: #fff;
 }
 .iconformatting {
   padding: 0px 5px;
