--- a/css/simple-sidebar.css
+++ b/css/simple-sidebar.css
@@ -119,6 +119,7 @@
   margin-bottom: 8px;
   background-color: #000;
   background-image: none;
+  border: none;
   border-radius: 4px;
 }
 .nav-toggle:focus {
