--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,7 +21,7 @@
     <div id="page-content-wrapper">
       <div class="container-fluid">
         <div class="row">
-          <div class="col-xs-12 col-offset-xs-2">
+          <div class="col-xs-12 col-xs-offset-2">
             {{ content }}
           </div>
         </div>
