--- a/css/simple-sidebar.css
+++ b/css/simple-sidebar.css
@@ -117,7 +117,7 @@
   margin-top: 8px;
   margin-right: 15px;
   margin-bottom: 8px;
-  background-color: #000;
+  background-color: none;
   background-image: none;
   border: none;
   border-radius: 4px;
@@ -135,7 +135,7 @@
   margin-top: 4px;
 }
 .icon-bar {
-  background-color: #fff;
+  background-color: #000;
 }
 .iconformatting {
   padding: 0px 5px;
