--- a/css/simple-sidebar.css
+++ b/css/simple-sidebar.css
@@ -117,7 +117,7 @@
   margin-top: 8px;
   margin-right: 15px;
   margin-bottom: 8px;
-  background-color: none;
+  background-color: transparent;
   background-image: none;
   border: none;
   border-radius: 4px;
