--- a/_includes/head.html
+++ b/_includes/head.html
@@ -7,11 +7,14 @@
   <title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
   <meta name="description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}">
 
-  <link rel="stylesheet" href="{{ "/css/simple-sidebar.css" | prepend: site.baseurl }}">
-  <link rel="stylesheet" href="{{ "/css/bootstrap.min.css" | prepend: site.baseurl }}">
-  <link rel="stylesheet" href="{{ "/fontawesome/css/font-awesome.min.css" | prepend: site.baseurl }}">
+  <link rel="stylesheet" href="{{ "css/simple-sidebar.css" | prepend: site.baseurl }}">
+  <link rel="stylesheet" href="{{ "css/bootstrap.min.css" | prepend: site.baseurl }}">
+  <link rel="stylesheet" href="{{ "fontawesome/css/font-awesome.min.css" | prepend: site.baseurl }}">
   <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Indie+Flower">
   <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Dosis">
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
   <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}" />
+
+  <script src="{{"js/chart.js" | prepend: site.baseurl }}"></script>
+  <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
 </head>
