--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,11 +2,11 @@
   <!-- Sidebar -->
   <div id="sidebar-wrapper">
     <ul class="sidebar-nav text-center">
-      <li class="sidebar-brand">
-        <a href="{{site.baseurl}}/">{{ site.title }}</a>
-      </li>
       <div>
         <img src="img/photo.jpg" alt="Responsive image" id="mypic" class="img-circle">
+      </div>
+      <div class="sidebar-brand">
+        <a href="{{site.baseurl}}/">{{ site.title }}</a>
       </div>
       <li>
         {% for page in site.pages %} {% if page.title %}
@@ -23,9 +23,9 @@
           <a class="iconformatting" target="_blank" href="https://www.gooleplus.com/{{ site.google_plus_username}}"><i class="fa fa-google-plus-square fa-3x"></i></a> {% endif %}
         </p>
       </div>
-      <li>
+      <div>
         <p class="whitefont">&copy; Luiseaguilar 2015</p>
-      </li>
+      </div>
     </ul>
   </div>
 </header>
