--- a/css/simple-sidebar.css
+++ b/css/simple-sidebar.css
@@ -78,18 +78,22 @@
 .sidebar-nav > .sidebar-brand {
   font-size: 36px;
   margin: 0px 0px 30px;
+  text-decoration: none;
 }
 .sidebar-nav > .sidebar-brand a {
   color: #fff;
   font-family: "Indie Flower", serif;
   font-size: 36px;
   margin: 0px 0px 30px;
+  text-decoration: none;
+
 }
 .sidebar-nav > .sidebar-brand a:hover {
   color: #fff;
   background: none;
   font-size: 36px;
   margin: 0px 0px 30px;
+  text-decoration: none;
 }
 @media(min-width:768px) {
   #wrapper {
