--- a/css/simple-sidebar.css
+++ b/css/simple-sidebar.css
@@ -83,6 +83,7 @@
 .sidebar-nav > .sidebar-brand a {
   color: #fff;
   font-family: "Indie Flower", serif;
+  font-weight: bold;
   font-size: 36px;
   margin: 0px 0px 30px;
   text-decoration: none;
@@ -167,22 +168,22 @@
 #mypic{
   margin: 10px 0px 0px;
 }
-/* Skills */
-.skills {
+/* box */
+.box {
   background-color: #4e4e4e;
   padding-top: 10px;
   padding-bottom: 10px;
   margin-top: 50px;
 }
 
-.skills h3 {
+.box h3 {
   color: white;
   font-family: "Dosis", serif;
   text-transform: uppercase;
   font-weight: bold;
 }
 
-.skills p {
+.box p {
   color: white;
   font-weight: bold;
   font-family: "Dosis", serif;
