--- a/_includes/head.html
+++ b/_includes/head.html
@@ -10,6 +10,7 @@
   <link rel="stylesheet" href="{{ "css/simple-sidebar.css" | prepend: site.baseurl }}">
   <link rel="stylesheet" href="{{ "css/bootstrap.min.css" | prepend: site.baseurl }}">
   <link rel="stylesheet" href="{{ "fontawesome/css/font-awesome.min.css" | prepend: site.baseurl }}">
+  <link rel="stylesheet" href="{{ "css/animate.css" | prepend: site.baseurl }}">
   <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Indie+Flower">
   <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Dosis">
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
