--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,14 +8,14 @@
 
   <div id="wrapper">
     {% include header.html %}
-      <div class="container-fluid">
-        <button type="button" class="nav-toggle" id="menu-toggle">
-          <span class="sr-only">Toggle navigation</span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-        </button>
-      </div>
+    <div class="container-fluid">
+      <button type="button" class="nav-toggle" id="menu-toggle">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+    </div>
     <div id="page-content-wrapper">
       <div class="container-fluid">
         <div class="row">
@@ -28,17 +28,22 @@
   </div>
 
   <!-- Jquery -->
-  <script src="{{"js/jquery.js" | prepend: site.baseurl }}"></script>
+  <script src="{{" js/jquery.js " | prepend: site.baseurl }}"></script>
 
   <!-- Bootstrap Core JavaScript -->
-  <script src="{{"js/bootstrap.min.js" | prepend: site.baseurl }}"></script>
+  <script src="{{" js/bootstrap.min.js " | prepend: site.baseurl }}"></script>
 
   <!-- Menu Toggle Script -->
   <script>
-  $("#menu-toggle").click(function(e) {
-    e.preventDefault();
-    $("#wrapper").toggleClass("toggled");
-  });
+    $("#menu-toggle").click(function(e) {
+      e.preventDefault();
+      $("#wrapper").toggleClass("toggled");
+    });
+  </script>
+
+  <script src="js/wow.min.js"></script>
+  <script>
+    new WOW().init();
   </script>
 
 </body>
