--- a/css/simple-sidebar.css
+++ b/css/simple-sidebar.css
@@ -4,6 +4,9 @@
  * For details, see http://www.apache.org/licenses/LICENSE-2.0.
  */
 /* Toggle Styles */
+html{
+  background-color:#2F2F2F;
+}
 
 #wrapper {
   padding-left: 0;
@@ -11,9 +14,12 @@
   -moz-transition: all 0.5s ease;
   -o-transition: all 0.5s ease;
   transition: all 0.5s ease;
+  background-color:#2F2F2F;
+
 }
 #wrapper.toggled {
   padding-left: 250px;
+  background-color:#2F2F2F;
 }
 #sidebar-wrapper {
   z-index: 1000;
@@ -23,7 +29,7 @@
   height: 100%;
   margin-left: -250px;
   overflow-y: auto;
-  background: #74cfae;
+  background: #3868A5;
   -webkit-transition: all 0.5s ease;
   -moz-transition: all 0.5s ease;
   -o-transition: all 0.5s ease;
@@ -35,14 +41,12 @@
 #page-content-wrapper {
   width: 100%;
   position: absolute;
-  padding-top: 25px;
-  padding-right: 5px;
-  padding-left: 35px;
+  padding: 0px 5px 10px 45px;
+
 }
 #wrapper.toggled #page-content-wrapper {
   position: absolute;
-  padding-right: 5px;
-  padding-left: 35px;
+  padding: 0px 5px 10px 45px;
 }
 /* Sidebar Styles */
 
@@ -99,9 +103,11 @@
 @media(min-width:768px) {
   #wrapper {
     padding-left: 250px;
+    background-color:#2F2F2F;
   }
   #wrapper.toggled {
     padding-left: 0;
+    background-color:#2F2F2F;
   }
   #sidebar-wrapper {
     width: 250px;
@@ -110,25 +116,22 @@
     width: 0;
   }
   #page-content-wrapper {
-    padding-top: 25px;
-    padding-right: 5px;
-    padding-left: 35px;
+    padding: 0px 5px 10px 45px;
     position: inherit;
   }
   #wrapper.toggled #page-content-wrapper {
     position: inherit;
     margin-right: 0;
-    padding-right: 5px;
-    padding-left: 35px;
+    padding: 0px 5px 10px 45px;
   }
 }
 .nav-toggle {
   position: fixed;
   float: left;
-  padding: 20px 0px;
-  margin-top: 8px;
+  padding: 5px 5px;
+  margin-top: 10px;
   margin-right: 10px;
-  background-color: transparent;
+  background-color: #3868A5;
   background-image: none;
   border: none;
   border-radius: 4px;
@@ -147,18 +150,18 @@
   margin-top: 4px;
 }
 .icon-bar {
-  background-color: #000;
+  background-color: #fff;
 }
 .iconformatting {
   padding: 0px 5px;
 }
 .iconformatting:hover,
 .iconformatting:active {
-  color: #fff;
+  color: #2F2F2F;
 }
 .iconformatting:link,
 .iconformatting:visited {
-  color: #fff;
+  color: #2F2F2F;
 }
 .whitefont {
   color: #fff;
@@ -170,10 +173,9 @@
 }
 /* box */
 .box {
-  background-color: #4e4e4e;
-  padding-top: 10px;
-  padding-bottom: 10px;
-  margin-top: 50px;
+  border: 10px solid #4E4E4E;
+  margin-bottom: 20px;
+  margin-top: 10px
 }
 
 .box h3 {
@@ -215,22 +217,19 @@ hr.star-primary:after {
 }
 
 hr.star-light {
-    border-color: #4e4e4e;
+    border-color: #2F2F2F;
 }
 
 hr.star-light:after {
-    color: #4e4e4e;
-    background-color: #fff;
+    color: #2F2F2F;
+    background-color: #2F2F2F;
 }
 
 hr.star-primary {
-    border-color: #fff;
+    border-color: #4E4E4E;
 }
 
 hr.star-primary:after {
-    color: #fff;
-    background-color: #4e4e4e;
-}
-.navbar{
-  background-color:#fff;
+    color: #4E4E4E;
+    background-color: #2F2F2F;
 }
