--- a/_includes/head.html
+++ b/_includes/head.html
@@ -12,7 +12,8 @@
   <link rel="stylesheet" href="{{ "fontawesome/css/font-awesome.min.css" | prepend: site.baseurl }}">
   <link rel="stylesheet" href="{{ "css/animate.css" | prepend: site.baseurl }}">
   <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Indie+Flower">
-  <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Dosis">
+  <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Oxygen">
+  <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Open+Sans">
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
   <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}" />
 
