--- a/_includes/head.html
+++ b/_includes/head.html
@@ -18,6 +18,6 @@
   <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}" />
 
   <script src="{{"js/chart.js" | prepend: site.baseurl }}"></script>
-  <script src="{{"js/modernizr.custom.js" | prepend: site.baseurl }}"></script>
+  <script src="{{ site.baseurl }}js/modernizr.custom.js"></script>
   <script type="text/javascript" src="{{" js/jquery.min.js " | prepend: site.baseurl }}"></script>
 </head>
