--- a/_includes/head.html
+++ b/_includes/head.html
@@ -17,7 +17,7 @@
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
   <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}" />
 
-  <script src="{{"js/chart.js" | prepend: site.baseurl }}"></script>
+  <script src="{{ site.baseurl }}js/charts.js"></script>
   <script src="{{ site.baseurl }}js/modernizr.custom.js"></script>
-  <script type="text/javascript" src="{{" js/jquery.min.js " | prepend: site.baseurl }}"></script>
+  <script type="text/javascript" src="{{ site.baseurl }}js/jquery.min.js"></script>
 </head>
