--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -6,6 +6,7 @@ layout: default
     <div class="box text-center">
       <div class="row">
         <h1 class="post-title">{{ page.title }}</h1>
+      </div>
         <p class="post-meta">{{ page.date | date: "%b %-d, %Y" }}{% if page.author %} • {{ page.author }}{% endif %}{% if page.meta %} • {{ page.meta }}{% endif %}</p>
         {{ content }}
       </div>
