--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -7,8 +7,10 @@ layout: default
       <div class="row">
         <h1 class="post-title">{{ page.title }}</h1>
       </div>
+      <div class"row">
         <p class="post-meta">{{ page.date | date: "%b %-d, %Y" }}{% if page.author %} • {{ page.author }}{% endif %}{% if page.meta %} • {{ page.meta }}{% endif %}</p>
         {{ content }}
       </div>
     </div>
   </div>
+</div>
