--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,12 +5,16 @@ layout: default
   <div class="container-fluid">
     <div class="box text-center">
       <div class="row">
-        <h1 class="post-title">{{ page.title }}</h1>
+        <h3 class="post-title">{{ page.title }}</h3>
+        <hr class="star-primary">
       </div>
-      <div class"row">
-        <p class="post-meta">{{ page.date | date: "%b %-d, %Y" }}{% if page.author %} • {{ page.author }}{% endif %}{% if page.meta %} • {{ page.meta }}{% endif %}</p>
-        {{ content }}
+      <div class="container-fluid">
+        <div class "row">
+          <p class="post-meta">{{ page.date | date: "%b %-d, %Y" }}{% if page.author %} • {{ page.author }}{% endif %}{% if page.meta %} • {{ page.meta }}{% endif %}</p>
+          {{ content }}
+        </div>
       </div>
     </div>
   </div>
+</div>
 </div>
