--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,7 +5,7 @@ layout: default
   <div class="container-fluid">
     <div class="box text-center">
       <div class="row">
-        <h3 class="post-title">{{ page.title }}</h3>
+        <h3>{{ page.title }}</h3>
         <hr class="star-primary">
       </div>
       <div class="container-fluid">
