--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,16 +5,9 @@ layout: default
   <div class="container-fluid">
     <div class="box text-center">
       <div class="row">
-        <h3>{{ page.title }}</h3>
+        <h1 class="post-title">{{ page.title }}</h1>
         <p class="post-meta">{{ page.date | date: "%b %-d, %Y" }}{% if page.author %} • {{ page.author }}{% endif %}{% if page.meta %} • {{ page.meta }}{% endif %}</p>
-        <hr class="star-primary">
-      </div>
-      <div class="container-fluid">
-        <div class "row">
-          {{ content }}
-        </div>
+        {{ content }}
       </div>
     </div>
   </div>
-</div>
-</div>
