--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,7 +6,7 @@
         <img src="{{ "img/photo.jpg" | prepend: site.baseurl }}" alt="Responsive image" id="mypic" class="img-circle">
       </div>
       <div class="sidebar-brand">
-        <a href="{{site.baseurl}}/">{{ site.title }}</a>
+        <a href="{{site.baseurl}}">{{ site.title }}</a>
       </div>
       <li>
         {% for page in site.pages %} {% if page.title %}
