--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,14 +3,14 @@
   <div id="sidebar-wrapper">
     <ul class="sidebar-nav text-center">
       <div>
-        <img src="{{ "img/photo.jpg" | prepend: site.baseurl }}" alt="Responsive image" id="mypic" class="img-circle">
+        <img src="{{ "/img/photo.jpg" | prepend: site.baseurl }}" alt="Responsive image" id="mypic" class="img-circle">
       </div>
       <div class="sidebar-brand">
-        <a href="{{ site.baseurl }}">{{ site.title }}</a>
+        <a href="{{ site.baseurl }}/">{{ site.title }}</a>
       </div>
       <li>
         {% for page in site.pages %} {% if page.title %}
-        <a href="{{ site.baseurl }}{{ page.url }}">{{ page.title }}</a> {% endif %} {% endfor %}
+        <a href="{{ page.url | prepend: site.baseurl }}">{{ page.title }}</a> {% endif %} {% endfor %}
       </li>
       <br>
       <div>
