--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,7 +20,7 @@
   </div>
 
   <!-- Bootstrap Core JavaScript -->
-  <script src="{{ site.baseurl }}js/bootstrap.min.js"></script>
+  <script src="{{ site.baseurl }}/js/bootstrap.min.js"></script>
 
   <!-- Menu Toggle Script -->
   <script>
@@ -30,7 +30,7 @@
     });
   </script>
 
-  <script src="{{ site.baseurl }}js/wow.min.js"></script>
+  <script src="{{ site.baseurl }}/js/wow.min.js"></script>
   <script>
     new WOW().init();
   </script>
