--- a/_includes/head.html
+++ b/_includes/head.html
@@ -7,17 +7,17 @@
   <title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %} | Web Developer</title>
   <meta name="description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}">
 
-  <link rel="stylesheet" href="{{ "css/simple-sidebar.css" | prepend: site.baseurl }}">
-  <link rel="stylesheet" href="{{ "css/bootstrap.min.css" | prepend: site.baseurl }}">
-  <link rel="stylesheet" href="{{ "fontawesome/css/font-awesome.min.css" | prepend: site.baseurl }}">
-  <link rel="stylesheet" href="{{ "css/animate.css" | prepend: site.baseurl }}">
+  <link rel="stylesheet" href="{{ "/css/simple-sidebar.css" | prepend: site.baseurl }}">
+  <link rel="stylesheet" href="{{ "/css/bootstrap.min.css" | prepend: site.baseurl }}">
+  <link rel="stylesheet" href="{{ "/fontawesome/css/font-awesome.min.css" | prepend: site.baseurl }}">
+  <link rel="stylesheet" href="{{ "/css/animate.css" | prepend: site.baseurl }}">
   <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Indie+Flower">
   <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Lato">
   <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Roboto+Slab">
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
   <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}" />
 
-  <script src="{{ site.baseurl }}js/chart.js"></script>
-  <script src="{{ site.baseurl }}js/modernizr.custom.js"></script>
-  <script type="text/javascript" src="{{ site.baseurl }}js/jquery.min.js"></script>
+  <script src="{{ "/js/chart.js" | prepend: site.baseurl }}"></script>
+  <script src="{{ site.baseurl }}/js/modernizr.custom.js"></script>
+  <script type="text/javascript" src="{{ site.baseurl }}/js/jquery.min.js"></script>
 </head>
