--- a/css/simple-sidebar.css
+++ b/css/simple-sidebar.css
@@ -337,8 +337,7 @@ hr.star-primary:after {
 }
 .boxblog {
   background-color: #4e4e4e;
-  padding: 20px;
-  margin-bottom: 20px;
+  margin: 20px;
 }
 .boxblog h3 {
   color: #fff;
