--- a/css/simple-sidebar.css
+++ b/css/simple-sidebar.css
@@ -337,7 +337,7 @@ hr.star-primary:after {
 }
 .boxblog {
   background-color: #4e4e4e;
-  margin: 20px;
+  margin-bottom: 10px;
 }
 .boxblog h3 {
   color: #fff;
