--- a/css/simple-sidebar.css
+++ b/css/simple-sidebar.css
@@ -337,6 +337,7 @@ hr.star-primary:after {
 }
 .boxblog {
   background-color: #4e4e4e;
+  padding: 0px 10px 10px 10px;
   margin-bottom: 10px;
 }
 .boxblog h3 {
