--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,12 +2,17 @@
 layout: default
 ---
 <div class="wow fadeInUp">
-  <div class="container-fluid">
-    <div class="box text-center">
+  <div class="box ">
+    <div class="container-fluid text-center">
       <div class="row">
-        <h1 class="post-title">{{ page.title }}</h1>
+        <h3>{{ page.title }}</h3>
         <p class="post-meta">{{ page.date | date: "%b %-d, %Y" }}{% if page.author %} • {{ page.author }}{% endif %}{% if page.meta %} • {{ page.meta }}{% endif %}</p>
-        {{ content }}
+        <hr class="star-primary">
+      </div>
+      <div class="row">
+        <div class="col-xs-12">
+          {{ content }}
+        </div>
       </div>
     </div>
   </div>
