--- a/css/simple-sidebar.css
+++ b/css/simple-sidebar.css
@@ -40,11 +40,11 @@ html {
 #page-content-wrapper {
   width: 100%;
   position: absolute;
-  padding: 0px 15px 10px 60px;
+  padding: 0px 0px 10px 35px;
 }
 #wrapper.toggled #page-content-wrapper {
   position: absolute;
-  padding: 0px 15px 10px 60px;
+  padding: 0px 0px 10px 35px;
 }
 /* Sidebar Styles */
 
@@ -96,7 +96,7 @@ html {
   margin: 0px 0px 30px;
   text-decoration: none;
 }
-@media(min-width:768px) {
+@media (min-width:768px) {
   #wrapper {
     padding-left: 250px;
     background-color: #2F2F2F;
@@ -187,10 +187,20 @@ html {
 hr.star-light, hr.star-primary {
   margin: 25px auto 30px;
   padding: 0;
+  max-width: 200px;
+  border: 0;
+  border-top: solid 5px;
+  text-align: center;
+}
+@media (min-width:768px) {
+hr.star-light, hr.star-primary {
+  margin: 25px auto 30px;
+  padding: 0;
   max-width: 100%;
   border: 0;
   border-top: solid 5px;
   text-align: center;
+}
 }
 hr.star-light:after, hr.star-primary:after {
   content: "\f005";
@@ -337,8 +347,15 @@ hr.star-primary:after {
 }
 .boxblog {
   background-color: #4e4e4e;
-  padding: 0px 20px 20px 20px;
+  padding: 5px 5px 20px;
   margin-bottom: 10px;
+}
+@media (min-width:768px) {
+.boxblog {
+  background-color: #4e4e4e;
+  padding: 20px 20px 20px 20px;
+  margin-bottom: 10px;
+}
 }
 .boxblog h3 {
   color: #fff;
@@ -417,3 +434,5 @@ hr.star-primary:after {
 .desc more {
   color: #aaa;
 }
+
+@media (min-width:768px) {
