--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -10,7 +10,7 @@ layout: default
         <hr class="star-primary">
       </div>
       <div class="row">
-        <div class="col-xs-12">
+        <div class="boxpost">
           {{ content }}
         </div>
       </div>
