--- a/css/simple-sidebar.css
+++ b/css/simple-sidebar.css
@@ -40,11 +40,11 @@ html {
 #page-content-wrapper {
   width: 100%;
   position: absolute;
-  padding: 0px 0px 10px 35px;
+  padding: 0px 5px 10px 35px;
 }
 #wrapper.toggled #page-content-wrapper {
   position: absolute;
-  padding: 0px 0px 10px 35px;
+  padding: 0px 5px 10px 35px;
 }
 /* Sidebar Styles */
 
@@ -434,5 +434,25 @@ hr.star-primary:after {
 .desc more {
   color: #aaa;
 }
-
+.boxpost {
+  background-color: #4e4e4e;
+  padding: 5px 5px 20px;
+  margin-bottom: 10px;
+  margin-right: 10px;
+}
 @media (min-width:768px) {
+.boxpost {
+  background-color: #4e4e4e;
+  padding: 20px 20px 20px 20px;
+  margin-bottom: 10px;
+}
+}
+.boxpost h3 {
+  color: #fff;
+  font-family: "Roboto Slab", serif;
+}
+.boxpost p {
+  color: #fff;
+  font-family: "Lato", serif;
+  font-size: 16px;
+}
