--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -10,8 +10,10 @@ layout: default
         <hr class="star-primary">
       </div>
       <div class="row">
-        <div class="boxpost">
-          {{ content }}
+        <div class="col-xs-12">
+          <div class="boxblog">
+            {{ content }}
+          </div>
         </div>
       </div>
     </div>
