--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,10 +5,12 @@ layout: default
   <div class="box">
     <div class="container-fluid text-center">
       <div class="row">
+        <div class="col-xs-12">
         <h3>{{ page.title }}</h3>
         <p class="post-meta">{{ page.date | date: "%b %-d, %Y" }}{% if page.author %} • {{ page.author }}{% endif %}{% if page.meta %} • {{ page.meta }}{% endif %}</p>
         <hr class="star-primary">
       </div>
+    </div>
       <div class="row">
         <div class="col-xs-12">
           <div class="boxblog">
