--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,8 +3,8 @@ layout: default
 ---
 <div class="wow fadeInUp">
   <div class="box">
-    <div class="container-fluid text-center">
-      <div class="row">
+    <div class="container-fluid">
+      <div class="row text-center">
         <div class="col-xs-12">
         <h3>{{ page.title }}</h3>
         <p class="post-meta">{{ page.date | date: "%b %-d, %Y" }}{% if page.author %} • {{ page.author }}{% endif %}{% if page.meta %} • {{ page.meta }}{% endif %}</p>
