--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -16,5 +16,10 @@ layout: default
             {{ content }}
         </div>
       </div>
+      <div class="row">
+        <div class="col-xs-12">
+          
+        </div>
+      </div>
     </div>
   </div>
