--- a/_includes/header.html
+++ b/_includes/header.html
@@ -9,8 +9,10 @@
         <a href="{{ site.baseurl }}/">{{ site.title }}</a>
       </div>
       <li class="links">
-        {% for page in site.pages %} {% if page.title %}
-        <a href="{{ page.url | prepend: site.baseurl }}">{{ page.title }}</a> {% endif %} {% endfor %}
+        <a href="/portfolio">Portfolio</a>
+        <a href="/resume">Resume</a>
+        <a href="/contact">Lets Tak</a>
+        <a href="/blog">Blog</a>
       </li>
       <br>
       <div class="text-center">
