--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,8 +20,8 @@
   </div>
 
   <!-- Bootstrap Core JavaScript -->
-  <script src="{{ "/js/bootsrap.min.js" | prepend: site.baseurl }}"></script>
-
+  <script src="{{ "/js/bootstrap.min.js" | prepend: site.baseurl }}"></script>
+  
   <!-- Menu Toggle Script -->
   <script>
     $("#menu-toggle").click(function(e) {
