--- a/_includes/header.html
+++ b/_includes/header.html
@@ -11,18 +11,31 @@
       <li class="links">
         <a href="/portfolio">Portfolio</a>
         <a href="/resume">Resume</a>
-        <a href="/contact">Lets Tak</a>
+        <a href="/contact">Lets Talk</a>
         <a href="/blog">Blog</a>
       </li>
       <br>
       <div class="text-center">
         <p>
           {% if site.twitter_username %}
-          <a class="iconformatting" target="_blank" href="https://www.twitter.com/{{ site.twitter_username }}"><i id="twittericon" class="fa fa-twitter-square fa-3x"></i></a> {% endif%} {% if site.facebook_username %}
-          <a class="iconformatting" target="_blank" href="https://www.facebook.com/{{ site.facebook_username }}"><i id="facebookicon" class="fa fa-facebook-square fa-3x"></i></a> {% endif%} {% if site.github_username %}
-          <a class="iconformatting" target="_blank" href="https://www.github.com/{{ site.github_username }}"><i id="githubicon" class="fa fa-github-square fa-3x"></i></a> {% endif %} {% if site.lindekin_username %}
-          <a class="iconformatting" target="_blank" href="https://www.linkedin.com/{{ site.linkedin_username }}"><i id="linkedinicon" class="fa fa-linkedin-square fa-3x"></i></a> {% endif %} {% if site.google_plus_username %}
-          <a class="iconformatting" target="_blank" href="https://www.gooleplus.com/{{ site.google_plus_username}}"><i class="fa fa-google-plus-square fa-3x"></i></a> {% endif %}
+          <a class="iconformatting" target="_blank" href="https://www.twitter.com/{{ site.twitter_username }}"><i id="twittericon" class="fa fa-twitter-square fa-3x"></i></a>
+          {% endif%}
+
+          {% if site.facebook_username %}
+          <a class="iconformatting" target="_blank" href="https://www.facebook.com/{{ site.facebook_username }}"><i id="facebookicon" class="fa fa-facebook-square fa-3x"></i></a>
+          {% endif%}
+
+          {% if site.github_username %}
+          <a class="iconformatting" target="_blank" href="https://www.github.com/{{ site.github_username }}"><i id="githubicon" class="fa fa-github-square fa-3x"></i></a>
+          {% endif %}
+
+          {% if site.lindekin_username %}
+          <a class="iconformatting" target="_blank" href="https://www.linkedin.com/{{ site.linkedin_username }}"><i id="linkedinicon" class="fa fa-linkedin-square fa-3x"></i></a>
+          {% endif %}
+
+          {% if site.google_plus_username %}
+          <a class="iconformatting" target="_blank" href="https://www.gooleplus.com/{{ site.google_plus_username}}"><i class="fa fa-google-plus-square fa-3x"></i></a>
+          {% endif %}
         </p>
       </div>
       <div class="text-center">
